--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"prettier": "2.8.8"
 	},
 	"lint-staged": {
-		"*.--write": "prettier --write"
+		"*.{js,jsx}": "npm run lint",
+		"*.{js,jsx,css,md,html,json}": "npm run format"
 	}
 }
